# dotfiles

./: .gitignore  Makefile  README.md  bash_history  cc
.cursor/plans/: hyprdesktop_plugin_plan_598e5402.plan.md
config/: link.sh
config/hypr/: hypridle.conf  hyprland.conf  hyprland.lua  install.sh
config/hypr/conf/: animations.lua  appearance.lua  autostart.lua  env.lua  input.lua  keybinds.lua  monitors.lua  programs.lua  rules.lua
config/hypr/lua/: apps.lua  autostart.lua  binds.lua  env.lua  floating.lua  focus.lua  input.lua  looknfeel.lua  monitors.lua  theme.lua  windowrules.lua
config/hypr/tools/: check.lua
config/kitty/: kitty.conf
config/quickshell/: quickshell.qml  shell.qml
config/quickshell/bar/: Bar.qml  BarCenter.qml  BarLeft.qml  BarRight.qml
config/quickshell/bluetooth/: BluetoothDeviceRow.qml  BluetoothPanel.qml
config/quickshell/components/: Anim.qml  CAnim.qml  Elevation.qml  FloatingCard.qml  FloatingCardCenter.qml  MaterialIcon.qml  PanelChrome.qml  PanelDivider.qml  StateLayer.qml  StyledClippingRect.qml  StyledListView.qml  StyledRect.qml  StyledScrollBar.qml  StyledText.qml  StyledTextField.qml  qmldir
os-setup/: setup.sh
os-setup/arch/: setup.sh
os-setup/ubuntu/: setup.sh
os/arch/: font.sh  packagelist.toml
plugins/hyprdesktop/: CMakeLists.txt  README.md  context.md  hyprpm.toml
plugins/hyprdesktop/src/: BarDeco.cpp  BarDeco.hpp  CsdPolicy.cpp  CsdPolicy.hpp  DesktopMode.cpp  DesktopMode.hpp  Ghosting.cpp  Ghosting.hpp  Globals.hpp  InputBackdrop.cpp  InputBackdrop.hpp  Layout.cpp  Layout.hpp  main.cpp
(+153 files in other folders)
